# tsu-posthub-api

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: main.yml
apps/auth_app/: admin.py  apps.py  serializers.py  serializers_response.py  urls.py  views.py
apps/auth_app/migrations/: 0001_initial.py
apps/post_app/: admin.py  apps.py  models.py  pagination.py  serializers.py  serializers_response.py  signals.py  urls.py  views.py
apps/post_app/migrations/: 0001_initial.py  0002_remove_post_image_postimage.py  0003_post_likes.py
apps/profile_app/: serializers.py  serializers_response.py  urls.py  views.py
config/: settings.py  urls.py
core/: exceptions.py  mixins.py  schema.py  serializers.py
